--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1",
     "react-tabs": "^6.0.2",
+    "react-tooltip": "^5.25.1",
     "sass": "^1.69.7"
   },
   "devDependencies": {
