--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-router-dom": "^6.21.1",
     "react-tabs": "^6.0.2",
     "react-tooltip": "^5.25.1",
-    "sass": "^1.69.7"
+    "sass": "^1.69.7",
+    "vite-plugin-pwa": "^0.17.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
