--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,6 @@
 {
     "name": "choose-app",
     "short_name": "chooser",
-    "description": "",
     "icons": [
         {
             "src": "favicon.ico",
@@ -10,15 +9,13 @@
         },
         {
             "src": "android-chrome-192x192.png",
-            "sizes": "192x192",
             "type": "image/png",
-            "purpose": "favicon"
+            "sizes": "192x192"
         },
         {
             "src": "android-chrome-512x512.png",
             "sizes": "512x512",
-            "type": "image/png",
-            "purpose": "favicon"
+            "type": "image/png"
         },
         {
             "src": "apple-touch-icon.png",
@@ -33,10 +30,8 @@
             "purpose": "any maskable"
         }
     ],
-    "theme_color": "#171717",
-    "background_color": "#f0e7db",
+    "start_url": ".",
     "display": "standalone",
-    "scope": "/",
-    "start_url": "/",
-    "orientation": "portrait"
+    "theme_color": "#171717",
+    "background_color": "#f0e7db"
 }
