--- a/manifest.json
+++ b/manifest.json
@@ -1,37 +1,37 @@
 {
     "name": "choose-app",
     "short_name": "chooser",
-    "description": "",
     "icons": [
         {
-            "src": "/favicon_io/android-chrome-192x192.png",
-            "sizes": "192x192",
-            "type": "image/png",
-            "purpose": "favicon"
+            "src": "favicon.ico",
+            "sizes": "64x64 32x32 24x24 16x16",
+            "type": "image/x-icon"
         },
         {
-            "src": "/favicon_io/android-chrome-512x512.png",
+            "src": "android-chrome-192x192.png",
+            "type": "image/png",
+            "sizes": "192x192"
+        },
+        {
+            "src": "android-chrome-512x512.png",
             "sizes": "512x512",
-            "type": "image/png",
-            "purpose": "favicon"
+            "type": "image/png"
         },
         {
-            "src": "/favicon_io/apple-touch-icon.png",
+            "src": "apple-touch-icon.png",
             "sizes": "180x180",
             "type": "image/png",
             "purpose": "apple touch icon"
         },
         {
-            "src": "/favicon_io/android-chrome-512x512.png",
+            "src": "android-chrome-512x512.png",
             "sizes": "512x512",
             "type": "image/png",
             "purpose": "any maskable"
         }
     ],
-    "theme_color": "#171717",
-    "background_color": "#f0e7db",
+    "start_url": ".",
     "display": "standalone",
-    "scope": "/",
-    "start_url": "/",
-    "orientation": "portrait"
+    "theme_color": "#171717",
+    "background_color": "#f0e7db"
 }
